Updated the scripts, now there is a dropdown to select which UV to use, this is to fix a bug where both Lower and Upper were on the same page - so they exported and overlapped on the png export. this way we can export one at a time

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,12 @@ canvas {
     background-color: #fff;
 }
 
+.configuration {
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+
 button {
     padding: 10px 20px;
     font-size: 10px;
